# microProjects

./: .gitignore  Readme.md
C/: README.md  c.fish
async_test/: Cargo.toml
async_test/src/: main.rs
better_int_parser/: .gitignore  Cargo.toml  README.md
better_int_parser/benches/: main.rs
better_int_parser/src/: lib.rs
better_int_parser/tests/: test.rs
compareImage/: Readme.md  compare.py
crowdRemover/: align_remove.sh  aligner.py  crowdremover.py
highload.fun/: Cargo.toml
highload.fun/src/: lib.rs
highload_fun/: .gitignore  Cargo.toml  README.md
highload_fun/benches/: main.rs
highload_fun/src/: count_uint8.rs  lib.rs  main.rs  parse_int.rs  print_usize.rs
highload_fun/tests/: count_uint8.rs  parse_int.rs  print_usize.rs
improveSkyImage/: Readme.md  improveSkyImage.py  localOrientation.py
md5/: .gitignore  Makefile  README.md  lib.c  md5.c  md5.h  test.data  test_data.py  testtool.c
memoryAccessPattern/: Readme.md  main.cpp  memoryAccessPattern.vcxproj
mocrodalle/: Dockerfile  Readme.md  index.html  requirements.txt  server.py
openai/: unittest.py
seamCarving/: Readme.md  seamCarving.py
switchVsIfElse/: Makefile  Readme.md  main.cpp  test.cpp
weekend_rag/: rag.py  requirements.txt
