[package]
name = "async_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1"}
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
clap = {version = "4.3.21", features = ["derive"] }
simple_logger = "4"
log = "0.4"
