[package]
name = "better_int_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
rand = "0.8.5"

[profile.release]
opt-level=3
lto=true
target-cpu="native"

[[bench]]
name = "main"
harness = false