[package]
name = "highload_fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = {version="0.5.1", features=["html_reports"]}

[dependencies]
rand = "0.8.5"

[profile.release]
opt-level=3
lto=true

[[bench]]
name = "main"
harness = false
